# chat

./: .gitignore  AGENTS.md  Cargo.toml  README.md  prd.json  progress.txt
.claude/: settings.local.json
archive/2026-02-01-history-delete-hint/: progress.txt
src/: lib.rs  main.rs
src/llm/: ollama.rs
src/shell/: chat.bash  chat.fish  chat.zsh
src/tui/: config.rs
