[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.28"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ollama-rs = { version = "0.2.5", features = ["stream"] }
ratatui = "0.29.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
