[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ollama-rs = { version = "0.2.5", features = ["stream"] }
ratatui = { version = "0.29.0", features = ["serde", "macros", "palette"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
arboard = "3"
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
