[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
ollama-rs = { version = "0.3.3", features = ["stream"] }
ratatui = { version = "0.30.0", features = ["serde", "macros", "palette"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
arboard = "3"
dirs = "6.0.0"
toml = "0.9.11"
serde = { version = "1", features = ["derive"] }
